Changed getLogger() to getSystemLogger()